--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.1",
     "cors": "^2.8.5",
+    "dataloader": "^1.4.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
