--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.16.1",
     "graphql": "^14.2.1",
     "ioredis": "^4.9.0",
+    "moment": "^2.24.0",
     "pg": "^7.10.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.3",
@@ -34,6 +35,7 @@
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
     "@types/ioredis": "^4.0.10",
+    "@types/moment": "^2.13.0",
     "@types/node": "^11.13.7",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.32",
