--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.9",
+    "@types/core-js": "^2.5.0",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
     "@types/ioredis": "^4.0.10",
     "@types/moment": "^2.13.0",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.1",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.4.5"
