--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules src/index.ts",
     "db:setup": "ts-node ./src/test-utils/setup.ts",
     "test": "npm run db:setup && jest"
   },
@@ -38,7 +38,7 @@
     "@types/ioredis": "^4.0.10",
     "@types/node": "^12.0.2",
     "ts-node": "^8.1.0",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "^3.4.5"
   }
 }
