--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-redis": "^3.4.1",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
+    "date-fns": "^1.30.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
@@ -32,6 +33,7 @@
     "@types/connect-redis": "^0.0.9",
     "@types/core-js": "^2.5.0",
     "@types/cors": "^2.8.4",
+    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
