--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,12 +1,11 @@
 {
-  "name": "default",
-  "type": "postgres",
-  "host": "localhost",
-  "port": 5432,
-  "username": "postgres",
-  "password": "postgres",
-  "database": "timeclock",
-  "synchronize": true,
-  "logging": true,
-  "entities": ["src/entity/*.*"]
+	"type": "postgres",
+	"host": "localhost",
+	"port": 5432,
+	"username": "postgres",
+	"password": "postgres",
+	"database": "timeclock",
+	"synchronize": true,
+	"logging": true,
+	"entities": ["src/entity/**/*"]
 }
