--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-  "name": "timeclock-typescript",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules src/index.ts",
-    "db:setup": "ts-node ./src/test-utils/setup.ts",
-    "test": "npm run db:setup && jest"
-  },
-  "dependencies": {
-    "apollo-server-express": "^2.4.8",
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.9.1",
-    "connect-redis": "^3.4.1",
-    "cors": "^2.8.5",
-    "dataloader": "^1.4.0",
-    "date-fns": "^1.30.1",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-session": "^1.16.1",
-    "graphql": "^14.3.0",
-    "ioredis": "^4.9.0",
-    "moment": "^2.24.0",
-    "pg": "^7.10.0",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.3",
-    "typeorm": "^0.2.16"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.9",
-    "@types/core-js": "^2.5.0",
-    "@types/cors": "^2.8.4",
-    "@types/date-fns": "^2.6.0",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.1",
-    "@types/graphql": "^14.2.0",
-    "@types/ioredis": "^4.0.10",
-    "@types/node": "^12.0.2",
-    "ts-node": "^8.1.0",
-    "ts-node-dev": "^1.0.0-pre.39",
-    "typescript": "^3.4.5"
-  }
+	"name": "timeclock-typescript",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"build-ts": "tsc",
+		"start": "ts-node src/index.ts",
+		"serve": "node dist/index.js",
+		"dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules src/index.ts",
+		"db:setup": "ts-node ./src/test-utils/setup.ts",
+		"test": "npm run db:setup && jest"
+	},
+	"dependencies": {
+		"apollo-server-express": "^2.4.8",
+		"bcryptjs": "^2.4.3",
+		"class-validator": "^0.9.1",
+		"connect-redis": "^3.4.1",
+		"cors": "^2.8.5",
+		"dataloader": "^1.4.0",
+		"date-fns": "^1.30.1",
+		"dotenv": "^7.0.0",
+		"express": "^4.16.4",
+		"express-session": "^1.16.1",
+		"graphql": "^14.3.0",
+		"ioredis": "^4.9.0",
+		"moment": "^2.24.0",
+		"pg": "^7.10.0",
+		"reflect-metadata": "^0.1.13",
+		"type-graphql": "^0.17.3",
+		"typeorm": "^0.2.16"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/connect-redis": "^0.0.9",
+		"@types/core-js": "^2.5.0",
+		"@types/cors": "^2.8.4",
+		"@types/date-fns": "^2.6.0",
+		"@types/dotenv": "^6.1.1",
+		"@types/express": "^4.16.1",
+		"@types/graphql": "^14.2.0",
+		"@types/ioredis": "^4.0.10",
+		"@types/node": "^12.0.2",
+		"ts-node": "^8.1.0",
+		"ts-node-dev": "^1.0.0-pre.39",
+		"typescript": "^3.4.5"
+	}
 }
