--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build-ts": "tsc",
 		"start": "ts-node src/index.ts",
-		"serve": "node dist/index.js",
+		"serve": "pm2 start ecosystem.config.js --env production",
 		"dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules src/index.ts",
 		"db:setup": "ts-node ./src/test-utils/setup.ts",
 		"test": "npm run db:setup && jest",
@@ -16,6 +16,7 @@
 		"apollo-server-express": "^2.4.8",
 		"bcryptjs": "^2.4.3",
 		"class-validator": "^0.9.1",
+		"connect-cas": "^1.8.1",
 		"connect-redis": "^3.4.1",
 		"cors": "^2.8.5",
 		"dataloader": "^1.4.0",
@@ -27,6 +28,7 @@
 		"ioredis": "^4.9.0",
 		"moment": "^2.24.0",
 		"pg": "^7.10.0",
+		"pm2": "^3.5.1",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^0.17.3",
 		"typeorm": "^0.2.16"
