--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 
 		"composite": false,
 		"removeComments": true,
-		"noImplicitAny": true,
+		"noImplicitAny": false,
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"noImplicitThis": true,
