--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "es6",
 		"module": "commonjs",
+		"lib": ["es2015", "esnext.asynciterable"],
 		"sourceMap": true,
 		"outDir": "dist",
 		"moduleResolution": "node",
