--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"dev:pm2": "pm2 start --watch",
 		"dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules src/index.ts",
 		"db:setup": "ts-node ./src/test-utils/setup.ts",
-		"test": "npm run db:setup && jest",
+		"test": "jest",
 		"postinstall": "$(yarn bin)/pm2 install typescript"
 	},
 	"dependencies": {
@@ -43,11 +43,16 @@
 		"@types/date-fns": "^2.6.0",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.16.1",
+		"@types/faker": "^4.1.5",
 		"@types/graphql": "^14.2.0",
 		"@types/ioredis": "^4.0.10",
+		"@types/jest": "^24.0.15",
 		"@types/node": "^12.0.2",
+		"faker": "^4.1.0",
+		"jest": "^24.8.0",
+		"ts-jest": "^24.0.2",
 		"ts-node": "^8.1.0",
 		"ts-node-dev": "^1.0.0-pre.39",
-		"typescript": "^3.4.5"
+		"typescript": "^3.5.2"
 	}
 }
